RESOLVED FIXED267646
[WGSL] shader,execution,zero_init:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267646
Summary [WGSL] shader,execution,zero_init:* is failing
Tadeu Zagallo
Reported 2024-01-17 11:30:18 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-17 11:30:51 PST
Tadeu Zagallo
Comment 2 2024-01-17 11:34:38 PST
EWS
Comment 3 2024-01-18 05:38:32 PST
Committed 273176@main (d86fef64a7c3): <https://commits.webkit.org/273176@main> Reviewed commits have been landed. Closing PR #22873 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.