[WGSL] shader,execution,zero_init:* is failing https://bugs.webkit.org/show_bug.cgi?id=267646 rdar://121134298

Reviewed by Mike Wyrzykowski.

Arrays and structs in the workgroup/threadgroup address space also need to be
explicitly initialized.

* Source/WebGPU/WGSL/AST/ASTCallExpression.h:
* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertLocalDefinitions):
(WGSL::RewriteGlobalVariables::initializeVariables):
(WGSL::RewriteGlobalVariables::storeInitialValue):
(WGSL::RewriteGlobalVariables::initializeAtomics): Deleted.
(WGSL::RewriteGlobalVariables::atomicStoreInitialValue): Deleted.
(WGSL::RewriteGlobalVariables::containsAtomic): Deleted.

Canonical link: https://commits.webkit.org/273176@main