Source/WebGPU/WGSL/AST/ASTCallExpression.h
@@ -28,6 +28,7 @@
 #include "ASTExpression.h"
 
 namespace WGSL {
+class RewriteGlobalVariables;
 class TypeChecker;
 
 namespace AST {
@@ -39,6 +40,7 @@ namespace AST {
 class CallExpression final : public Expression {
     WGSL_AST_BUILDER_NODE(CallExpression);
 
+    friend RewriteGlobalVariables;
     friend TypeChecker;
 
 public:
